# ribo_remover

./: .gitignore  LICENSE  MANIFEST.IN  README.md  pyproject.toml  rRNA_mammalian.fa  ribo_remover.py  setup.py
blast_db/: ribodb.nhr  ribodb.nin  ribodb.njs
src/ribo_remover/: fastq_to_fasta.py  ribo_remover.py  runner.py
src/ribo_remover/data/blast_db/: ribodb.ndb  ribodb.nsq
tests/: test_ribo_remover.py
tests/resources/: R1.fastq  R2.fastq  one_fastq.out.R1.fastq  one_fastq.stats.txt  two_fastqs.out.R2.fastq  two_fastqs.stats.txt
