[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ribo-remover"
version = "0.1.0"
requires-python = '>=3.9'

[project.scripts]
ribo-remover = "ribo_remover.runner:main"
fastq-converter = "ribo_remover.fastq_to_fasta:main"

[tool.rye]
dev-dependencies = ["pytest>=8.4.1", "ruff>=0.12.3"]
